# barbie

./: Cargo.toml  TODO.md  flake.nix  hmModule.nix
assets/: style.scss
src/: main.rs  socket.rs  ui.rs
src/widgets/: battery.rs  brightness.rs  clock.rs  hyprland.rs  mod.rs  power.rs  search.rs  sys.rs  volume.rs  weather.rs
