[package]
name = "crabpulsar"
version = "0.1.0"
edition = "2021"
authors = [ "sioodmy <hello@sioodmy.dev>" ]

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"

[dependencies]
tokio = { version = "1.35.0", features = [ "full" ] }
gtk-layer-shell = "0.8.0"
gtk = "0.18.1"
hyprland = "0.3.12"
glib = "0.18.4"
config = "0.13.4"
chrono = "0.4.31"
turf = "0.7.0"
anyhow = "1.0.75"
cpu-monitor = "0.1.1"
crossbeam-channel = "0.5.9"
