[package]
name = "barbie"
version = "0.1.0"
edition = "2021"
authors = [ "sioodmy <hello@sioodmy.dev>" ]

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"

[dependencies]
tokio = { version = "1.35.0", features = [ "full" ] }
reqwest = { version = "0.11.22", features = ["blocking"] }
gtk-layer-shell = "0.8.0"
gtk = "0.18.1"
hyprland = "0.3.12"
glib = "0.18.4"
config = "0.13.4"
chrono = "0.4.31"
turf = "0.7.0"
anyhow = "1.0.75"
cpu-monitor = "0.1.1"
crossbeam-channel = "0.5.9"
async-channel = "2.1.1"
notify = "6.1.1"
color-eyre = "0.6.2"
log = "0.4.20"
pretty_env_logger = "0.5.0"
systemstat = "0.2.3"
rand = "0.8.5"
